Fixing dark mode issue..

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light Only;
+  color-scheme: light dark;
   color: rgba(168, 159, 159, 0.87);
   background-color: #242424;
 
@@ -81,7 +81,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
     background-color: #20ceec;
